Fix OpenAPI schema drift
